# ottopi

./: .gitignore  .gitmodules  .travis.yml  LICENSE  README  README.md  deploy.sh  install.sh  make-pkg.sh  ottopi-bt.service  ottopi-imu.service  ottopi-rtk.service  ottopi-update.service  ottopi.service  pytest.ini  route-eth0.sh  route-usb0.sh  run_pi.sh  test-asr.sh  test_bt.sh
bt_remote/: README.md  bt_ctrl.py  bt_ctrl_cli.py  bt_remote.py  bt_remote_cli.py  bt_remote_hog.py  main.py  rest_client.py  rest_client_bang_acp.py  rest_client_bt_mgr.py  rest_client_routes.py  rest_client_start_timer.py  routes_rest_client.py  sim_bt_remote.py
clipper/: README.md  TODO.md  clipper.py  colors.py  extra_events.py  gopro.py  kml_maker.py  main.py  n2k_bcaster.py  overlay_maker.py  param.py  perf_view.py  polar_maker.py  project.py  race_events_recorder.py  summary_maker.py  timer_maker.py  video_maker.py  viewer.py
data/: commands.aup  commands.raw  sentences.jsgf  sentences.txt
gopro_gpmf/: CMakeLists.txt  README.md  main.cpp
hardware/: README.md  bom.csv
imu/: data_sender.py  fusion_test.py  main.py  raw_sensors.py  time_diff.py
javad/: jpl2gpx.py
navcomputer/: Logger.py  NavigatorListener.py  Polars.py  Speaker.py  bang_control.py  bang_logger.py  conf.py  const.py  data_registry.py  dest_info.py  flask_test.py  leg_analyzer.py  logger.py  main.py  nav.py  nav_stats.py  nav_window.py  navcomputer.py  navigator.py  navigator_listener.py  nmea_encoder.py  nmea_interface.py  nmea_sim.py  nmeaparser.py  phrf_table.py  polars.py  raw_instr_data.py  replay.py  test.py  (+6 more)
(+430 files in other folders)
